// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dehydation 404.html 1`] = `
<!DOCTYPE html>
<html lang="en-US">

  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>VuePress</title>
    <meta name="description" content="">
    <link rel="preload" href="/assets/css/0.styles.53e4595a.css" as="style">
    <link rel="preload" href="/assets/js/app.3fe70f2e.js" as="script">
    <link rel="preload" href="/assets/js/2.418462f5.js" as="script">
    <link rel="prefetch" href="/assets/js/3.db027a4f.js">
    <link rel="prefetch" href="/assets/js/4.f6ba1d08.js">
    <link rel="prefetch" href="/assets/js/5.222ba868.js">
    <link rel="prefetch" href="/assets/js/6.d7ad24ac.js">
    <link rel="stylesheet" href="/assets/css/0.styles.53e4595a.css">
  </head>

  <body>
    <div id="app"></div>
    <script src="/assets/js/app.3fe70f2e.js" defer></script>
    <script src="/assets/js/2.418462f5.js" defer></script>
  </body>

</html>
`;

exports[`dehydation index.html 1`] = `
<!DOCTYPE html>
<html lang="en-US">

  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>VuePress</title>
    <meta name="description" content="">
    <link rel="preload" href="/assets/css/0.styles.53e4595a.css" as="style">
    <link rel="preload" href="/assets/js/app.3fe70f2e.js" as="script">
    <link rel="preload" href="/assets/js/3.db027a4f.js" as="script">
    <link rel="preload" href="/assets/js/5.222ba868.js" as="script">
    <link rel="prefetch" href="/assets/js/2.418462f5.js">
    <link rel="prefetch" href="/assets/js/4.f6ba1d08.js">
    <link rel="prefetch" href="/assets/js/6.d7ad24ac.js">
    <link rel="stylesheet" href="/assets/css/0.styles.53e4595a.css">
  </head>

  <body>
    <div id="app">
      <div class="content default">
        <p>readme</p>
      </div>
      <div class="global-ui"></div>
    </div>
    <script src="/assets/js/app.3fe70f2e.js" defer></script>
    <script src="/assets/js/3.db027a4f.js" defer></script>
    <script src="/assets/js/5.222ba868.js" defer></script>
  </body>

</html>
`;

exports[`dehydation noscript.html 1`] = `
<!DOCTYPE html>
<html lang="en-US">

  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>VuePress</title>
    <meta name="description" content="">
    <link rel="stylesheet" href="/assets/css/0.styles.53e4595a.css">
  </head>

  <body>
    <div id="app">
      <div class="content default">
        <p>noscript</p>
      </div>
      <div class="global-ui"></div>
    </div>
  </body>

</html>
`;
